vercel removed, env props changed

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 MONGO_DATABASE=testdb
 MONGO_USERNAME=diarCode
-MONGO_PASSWORD=diarCode
+MONGO_PASSWORD=OKFVyZzKvEICzyCn
 MONGO_CLUSTER=test-cluster
 PORT=3000
 
